Fixes layout bug in items edit form.

--- a/client2/src/app/items/item-search-form/item-search-form.component.css
+++ b/client2/src/app/items/item-search-form/item-search-form.component.css
@@ -2,22 +2,22 @@
   margin-left: 5px;
 }
 
-/deep/ formly-form mat-form-field.mat-form-field {
+/deep/ .search-fields formly-form mat-form-field.mat-form-field {
   width: 25% !important;
 }
 
-/deep/ formly-form.width1 mat-form-field.mat-form-field {
+/deep/ .search-fields formly-form.width1 mat-form-field.mat-form-field {
   width: 100% !important;
 }
 
-/deep/ formly-form.width2 mat-form-field.mat-form-field {
+/deep/ .search-fields formly-form.width2 mat-form-field.mat-form-field {
   width: 50% !important;
 }
 
-/deep/ formly-form.width3 mat-form-field.mat-form-field {
+/deep/ .search-fields formly-form.width3 mat-form-field.mat-form-field {
   width: 33% !important;
 }
 
-/deep/ formly-form.width4 mat-form-field.mat-form-field {
+/deep/ .search-fields formly-form.width4 mat-form-field.mat-form-field {
   width: 24% !important;
 }
